# rrr-firmware

./: .gitignore  LICENSE-MIT
rrr-api/src/: lib.rs
rrr-embedded/: Cargo.toml  build.rs  sdkconfig.defaults
rrr-embedded/src/: api.rs  main.rs  wifi.rs
rrr-frontend/: Cargo.toml  index.css  index.html  index.scss
rrr-frontend/src/: main.rs
rrr-simulation/src/: main.rs  simulation.rs  visual_objects.rs
