[package]
name = "rrr-frontend"
version = "0.0.1"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1

[dependencies]
yew = { version="0.20", features=["csr"] }
web-sys = "0.3.64"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"